expressTemplate-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redexpresstemplate
spec:
  selector:
    matchLabels:
      app: redtemplateserver
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: redtemplateserver
    spec:
      containers:
      - name: red-express
        image: saurabhshandy/expressprodtemplate
        ports:
        - containerPort: 8000
