expressTemplate-svc-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: red-server
  labels:
    app: red-server
spec:
  ports:
    - port: 80
      targetPort : 8000
  selector:
    app: red-server
  # type: LoadBalancer
    # type : ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: blue-server
  labels:
    app: blue-server
spec:
  ports:
    - port: 80
      targetPort : 8000
  selector:
    app: blue-eserver
  # type: LoadBalancer
    # type : ClusterIP
