expresstemplate-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingree-template-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev-aks-ingress.westus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: dev-aks-ingress.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: expresstemplateserver
          servicePort: 80
      # - path: /hello-world-two
      #   backend:
      #     serviceName: ingress-demo
      #     servicePort: 80
